<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreenLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:text="@string/select"
            android:textSize="50sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cameraCard"
                style="@style/CardViewCustom"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_margin="20dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|top"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/circleAroundCamera"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="60dp">
                        <androidx.cardview.widget.CardView
                            android:id="@+id/cameraIcon"
                            android:layout_width="115dp"
                            android:layout_height="115dp"
                            android:layout_gravity="center"
                            app:cardCornerRadius="60dp">
                            <ImageView
                                android:id="@+id/cameraImageView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="12dp"
                                android:src="@drawable/cameraicon" />
                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center|top"
                        android:text="@string/camera"
                        android:textSize="25dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/galleryCard"
                style="@style/CardViewCustom"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_margin="20dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|top"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/circleAroundGallery"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="60dp">
                        <androidx.cardview.widget.CardView
                            android:id="@+id/galleryIcon"
                            android:layout_width="115dp"
                            android:layout_height="115dp"
                            android:layout_gravity="center"
                            app:cardCornerRadius="60dp">
                            <ImageView
                                android:id="@+id/galleryImageView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="12dp"
                                android:src="@drawable/galleryicon" />
                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|top"
                        android:text="@string/gallery"
                        android:textSize="25dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                style="@style/CardViewCustom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/enButton"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/american" />
                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/languageToggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:checked="false"
                            android:clickable="true"
                            android:textOff=""
                            android:textOn=""
                            android:thumb="@drawable/thumb"
                            app:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
                            app:track="@drawable/switch_track" />
                        <ImageView
                            android:id="@+id/ruButton"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/russian" />
                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp" />
                        <ImageView
                            android:id="@+id/lightButton"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/sun" />
                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/themeToggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:checked="false"
                            android:clickable="true"
                            android:textOff=""
                            android:textOn=""
                            android:thumb="@drawable/thumb"
                            app:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
                            app:track="@drawable/switch_track" />
                        <ImageView
                            android:id="@+id/darkButton"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/night" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center"
                    android:orientation="horizontal"
                    android:layout_marginBottom="-3dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:text="@string/language" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:text="@string/theme" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>