<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modelResultLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModelResult">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />
            <LinearLayout
                android:id="@+id/resultFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:elevation="1dp"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/resultImage"
                    android:layout_width="330dp"
                    android:layout_height="330dp"
                    android:scaleType="centerCrop" />
                <TextView
                    android:id="@+id/objectTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:textSize="35dp" />
                <TextView
                    android:id="@+id/moreInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/moreinfo"
                    android:textColor="@color/gray"
                    android:textSize="18dp" />
                <TextView
                    android:id="@+id/geo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/onmap"
                    android:textColor="@color/gray"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right|center">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/backCardView"
                        style="@style/CardViewCustom"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_margin="15dp"
                        app:cardElevation="8dp">
                        <LinearLayout
                            android:id="@+id/backButtonLinear"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">
                            <ImageView
                                android:id="@+id/backButtonImage"
                                android:layout_width="25dp"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:src="@drawable/ic_back" />
                            <TextView
                                android:id="@+id/backButtonText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/back"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:visibility="gone" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/homeCardView"
                        style="@style/CardViewCustom"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        app:cardElevation="8dp">
                        <LinearLayout
                            android:id="@+id/homeButtonLinear"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">
                            <ImageView
                                android:id="@+id/homeButtonImage"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                android:src="@drawable/ic_home" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="left|center">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/historyCardView"
                        style="@style/CardViewCustom"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_margin="15dp"
                        app:cardElevation="8dp">
                        <LinearLayout
                            android:id="@+id/historyButtonLinear"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">
                            <TextView
                                android:id="@+id/historyButtonText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/history"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:visibility="gone" />
                            <ImageView
                                android:id="@+id/historyButtonImage"
                                android:layout_width="25dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                android:src="@drawable/ic_history" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/additionalInfoCardView"
            style="@style/additionalCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/closeAdditionalCardView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        style="@style/CardViewCustom"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_marginHorizontal="100dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/black" />
                </LinearLayout>
                <TextView
                    android:id="@+id/objectTitleCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="35dp" />
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/objectDescriptionCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp" />
                </ScrollView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</LinearLayout>